--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Dancing Robot</h1>
     <div id="main">
-        <h2>Number Guessing Application</h2>
-        <h3 id="ss">Rules:(hai Meerinal maranam Uruthi)</h3>
-        <div id="rules">
-            <li>Select a number from 1 to 100</li>
-            <li>Click on the <b>Check</b> button</li>
-            <li>It will give you a hint to guess the number correctly</li>
-            <li>Repeat the same step untill you find the number</li><br>
-        </div><br>
-            <input type="number" name="num" id="n1" placeholder="Enter the number"><br>
-            <h1 id="result">Wait for the result!!!</h1>
-            <h2 id="count">0</h2>
-        <div id="buttons">
-            <button type="sumbit" onclick="findnum()">Check</button>
-            <button type="sumbit" onclick="window.location.reload()">Reset</button>
+        <div id="face">
+            <div id="eyes">
+                <div id="leye"></div>
+                <div id="reye"></div>
+            </div>
         </div>
-            <script src="./display.js"></script>
+        <div id="body">
+            <div id="larm"></div>
+            <div id="centre"></div>
+            <div id="rarm"></div>
+        </div>
+        <div id="leg">
+            <div id="lleg"></div>
+            <div id="rleg"></div>
+        </div>
     </div>
 </body>
 </html>
